--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,21 @@
-.okhttpcache
-pom.xml.versionsBackup
+*.versionsBackup
 .factorypath
-.classpath
+pom.xml.releaseBackup
+release.properties
+target
 .project
 .settings
-generated-src
-build
-target
+.classpath
+*.class
+*.log
+*.bak
+*~
+work*
 bin
-temp
+gradle
+gradlew
 .gradle
-.couscous
-couscous.phar
+build
+.okhttpcache
+.idea/
+*iml
