--- a/pom.xml
+++ b/pom.xml
@@ -231,6 +231,34 @@
 			<build>
 				<plugins>
 					<plugin>
+						<groupId>se.bjurr.gitchangelog</groupId>
+						<artifactId>git-changelog-maven-plugin</artifactId>
+						<version>${changelog.version}</version>
+						<executions>
+							<execution>
+								<id>GenerateGitChangelog</id>
+								<phase>generate-sources</phase>
+								<goals>
+									<goal>git-changelog</goal>
+								</goals>
+								<configuration>
+									<readableTagName>.*-(.*)$</readableTagName>
+									<file>CHANGELOG.md</file>
+								</configuration>
+							</execution>
+							<execution>
+								<id>GenerateGitChangelogSemanticVersion</id>
+								<phase>generate-sources</phase>
+								<goals>
+									<goal>semantic-version</goal>
+								</goals>
+								<configuration>
+									<updatePomWithNextSemanticVersionSuffixSnapshot>false</updatePomWithNextSemanticVersionSuffixSnapshot>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-gpg-plugin</artifactId>
 						<version>${gpg.version}</version>
