--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,7 @@
 				<configuration>
 					<autoVersionSubmodules>true</autoVersionSubmodules>
 					<releaseProfiles>release-sign-artifacts</releaseProfiles>
+					<preparationGoals>se.bjurr.gitchangelog:git-changelog-maven-plugin:semantic-version clean verify</preparationGoals>
 					<goals>deploy</goals>
 					<checkModificationExcludeList>
 						CHANGELOG.md,pom.xml
