--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,7 @@
 					<checkModificationExcludeList>
 						CHANGELOG.md,pom.xml
 					</checkModificationExcludeList>
+					<completionGoals>se.bjurr.gitchangelog:git-changelog-maven-plugin:git-changelog</completionGoals>
 				</configuration>
 			</plugin>
 			<plugin>
