fix: failOnError false on Spotbugs

--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,7 @@
 						<configuration>
 							<xmlOutput>true</xmlOutput>
 							<spotbugsXmlOutput>false</spotbugsXmlOutput>
+							<failOnError>false</failOnError>
 						</configuration>
 					</execution>
 				</executions>
