--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
 			<version>3.23.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		    <groupId>com.github.spotbugs</groupId>
+		    <artifactId>spotbugs-annotations</artifactId>
+		    <version>4.7.3</version>
+		    <scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
