feat: stepping git-changelog-maven-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -282,10 +282,17 @@
 						</configuration>
 						<executions>
 							<execution>
-								<id>GenerateGitChangelog</id>
+								<id>GenerateGitChangelogVersion</id>
 								<phase>generate-sources</phase>
 								<goals>
 									<goal>semantic-version</goal>
+								</goals>
+							</execution>
+							<execution>
+								<id>GenerateGitChangelogMd</id>
+								<phase>generate-sources</phase>
+								<goals>
+									<goal>git-changelog</goal>
 								</goals>
 							</execution>
 						</executions>
