feat: stepping git-changelog-maven-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,7 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>se.bjurr.bom</groupId>
 	<artifactId>bjurr-bom</artifactId>
@@ -147,6 +150,9 @@
 				<artifactId>git-changelog-maven-plugin</artifactId>
 				<version>${changelog.version}</version>
 				<configuration>
+					<updatePomWithNextSemanticVersionSuffixSnapshot>false</updatePomWithNextSemanticVersionSuffixSnapshot>
+					<updatePomWithCurrentSemanticVersionSuffixSnapshotIfNotTagged>
+						false</updatePomWithCurrentSemanticVersionSuffixSnapshotIfNotTagged>
 					<readableTagName>.*-(.*)$</readableTagName>
 					<ignoreCommitsIfMessageMatches>
 						^\[maven-release-plugin\].*|^Merge.*
