--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>se.bjurr.bom</groupId>
 	<artifactId>bjurr-bom</artifactId>
-	<version>0.8.0-SNAPSHOT</version>
+	<version>0.7.12-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Bjurr BOM</name>
 	<description>My BOM.</description>
@@ -12,7 +12,7 @@
 	<scm>
 		<developerConnection>scm:git:git@github.com:tomasbjerre/bjurr-bom.git</developerConnection>
 		<url>https://github.com/tomasbjerre/bjurr-bom</url>
-		<tag>bjurr-bom-0.7.11</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<distributionManagement>
